k8s/kline/01-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-kline-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/kline
