k8s/kline/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kline-service
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kline-service
  template:
    metadata:
      labels:
        app: kline-service
    spec:
      containers:
      - name: kline-service
        image: npool/kline:latest
        imagePullPolicy: Always
        command:
        - /bin/sh
        - -c
        - |
          SWAP_APPLICATION_ID=$(cat /shared-app-data/SWAP_APPLICATION_ID)
          SWAP_APPLICATION_ID=$SWAP_APPLICATION_ID SWAP_HOST=query-service:30080 ./kline-entrypoint.sh
        volumeMounts:
        - name: shared-app-data
          mountPath: /shared-app-data
      volumes:
      - name: shared-app-data
        persistentVolumeClaim:
          claimName: shared-app-data

---
apiVersion: v1
kind: Service
metadata:
  name: kline-service
  namespace: kube-system
spec:
  ports:
    - name: kline-service
      port: 25080
      targetPort: 25080
  selector:
    app: kline-service
